tests/ui/macros/include-single-expr.stderr
error: include macro expected single expression in source
  --> $DIR/include-single-expr-helper.rs:4:1
   |
LL | 10
   | ^^
   |
   = note: `#[deny(incomplete_include)]` on by default

error: aborting due to previous error

